@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.ast.tree;
 
-import java.util.Collections;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
@@ -41,7 +40,7 @@ public class RareTopN extends UnresolvedPlan {
 
   @Override
   public List<UnresolvedPlan> getChild() {
-    return Collections.singletonList(this.child);
+    return List.of(this.child);
   }
 
   @Override
