@@ -6,7 +6,6 @@
 package org.opensearch.sql.expression.function;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -68,11 +67,10 @@ public class FunctionDSL {
       implWithProperties(
           SerializableFunction<FunctionProperties, ExprValue> function, ExprType returnType) {
     return functionName -> {
-      FunctionSignature functionSignature =
-          new FunctionSignature(functionName, Collections.emptyList());
+      FunctionSignature functionSignature = new FunctionSignature(functionName, List.of());
       FunctionBuilder functionBuilder =
           (functionProperties, arguments) ->
-              new FunctionExpression(functionName, Collections.emptyList()) {
+              new FunctionExpression(functionName, List.of()) {
                 @Override
                 public ExprValue valueOf(Environment<Expression, ExprValue> valueEnv) {
                   return function.apply(functionProperties);
@@ -108,8 +106,7 @@ public class FunctionDSL {
           ExprType argsType) {
 
     return functionName -> {
-      FunctionSignature functionSignature =
-          new FunctionSignature(functionName, Collections.singletonList(argsType));
+      FunctionSignature functionSignature = new FunctionSignature(functionName, List.of(argsType));
       FunctionBuilder functionBuilder =
           (functionProperties, arguments) ->
               new FunctionExpression(functionName, arguments) {
