@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.planner.logical;
 
-import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -24,7 +23,7 @@ public class LogicalSort extends LogicalPlan {
 
   /** Constructor of LogicalSort. */
   public LogicalSort(LogicalPlan child, List<Pair<SortOption, Expression>> sortList) {
-    super(Collections.singletonList(child));
+    super(List.of(child));
     this.sortList = sortList;
   }
 
