@@ -6,7 +6,6 @@
 package org.opensearch.sql.planner.physical;
 
 import com.google.common.collect.Ordering;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import lombok.EqualsAndHashCode;
@@ -73,7 +72,7 @@ public class TakeOrderedOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   @Override
