@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.storage.write;
 
-import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.opensearch.sql.planner.physical.PhysicalPlan;
@@ -29,7 +28,7 @@ public abstract class TableWriteOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   /**
