@@ -22,7 +22,6 @@ import static org.opensearch.sql.datasources.utils.XContentParserUtils.*;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -104,7 +103,7 @@ class DataSourceServiceImplTest {
   @Test
   void testGetDataSourceSuccessCase() {
     DataSourceMetadata dataSourceMetadata =
-        metadata("test", DataSourceType.OPENSEARCH, Collections.emptyList(), ImmutableMap.of());
+        metadata("test", DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of());
     doNothing().when(dataSourceUserAuthorizationHelper).authorizeDataSource(dataSourceMetadata);
     when(dataSourceMetadataStorage.getDataSourceMetadata("test"))
         .thenReturn(Optional.of(dataSourceMetadata));
@@ -119,10 +118,7 @@ class DataSourceServiceImplTest {
   void testGetDataSourceWithAuthorizationFailure() {
     DataSourceMetadata dataSourceMetadata =
         metadata(
-            "test",
-            DataSourceType.OPENSEARCH,
-            Collections.singletonList("prometheus_access"),
-            ImmutableMap.of());
+            "test", DataSourceType.OPENSEARCH, List.of("prometheus_access"), ImmutableMap.of());
     doThrow(
             new SecurityException(
                 "User is not authorized to access datasource test. User should be mapped to any of"
@@ -148,7 +144,7 @@ class DataSourceServiceImplTest {
   void testCreateDataSourceSuccessCase() {
 
     DataSourceMetadata dataSourceMetadata =
-        metadata("testDS", DataSourceType.OPENSEARCH, Collections.emptyList(), ImmutableMap.of());
+        metadata("testDS", DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of());
     dataSourceService.createDataSource(dataSourceMetadata);
     verify(dataSourceMetadataStorage, times(1)).createDataSourceMetadata(dataSourceMetadata);
     verify(dataSourceFactory, times(1)).createDataSource(dataSourceMetadata);
@@ -156,11 +152,7 @@ class DataSourceServiceImplTest {
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
         .thenReturn(
             Optional.ofNullable(
-                metadata(
-                    "testDS",
-                    DataSourceType.OPENSEARCH,
-                    Collections.emptyList(),
-                    ImmutableMap.of())));
+                metadata("testDS", DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of())));
     DataSource dataSource = dataSourceService.getDataSource("testDS");
     assertEquals("testDS", dataSource.getName());
     assertEquals(storageEngine, dataSource.getStorageEngine());
@@ -178,9 +170,7 @@ class DataSourceServiceImplTest {
         .thenReturn(
             new ArrayList<>() {
               {
-                add(
-                    metadata(
-                        "testDS", DataSourceType.PROMETHEUS, Collections.emptyList(), properties));
+                add(metadata("testDS", DataSourceType.PROMETHEUS, List.of(), properties));
               }
             });
     Set<DataSourceMetadata> dataSourceMetadataSet = dataSourceService.getDataSourceMetadata(false);
@@ -201,12 +191,7 @@ class DataSourceServiceImplTest {
         .thenReturn(
             new ArrayList<>() {
               {
-                add(
-                    metadata(
-                        "testDS",
-                        DataSourceType.PROMETHEUS,
-                        Collections.emptyList(),
-                        ImmutableMap.of()));
+                add(metadata("testDS", DataSourceType.PROMETHEUS, List.of(), ImmutableMap.of()));
               }
             });
     Set<DataSourceMetadata> dataSourceMetadataSet = dataSourceService.getDataSourceMetadata(true);
@@ -219,7 +204,7 @@ class DataSourceServiceImplTest {
   @Test
   void testUpdateDataSourceSuccessCase() {
     DataSourceMetadata dataSourceMetadata =
-        metadata("testDS", DataSourceType.OPENSEARCH, Collections.emptyList(), ImmutableMap.of());
+        metadata("testDS", DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of());
     dataSourceService.updateDataSource(dataSourceMetadata);
     verify(dataSourceMetadataStorage, times(1)).updateDataSourceMetadata(dataSourceMetadata);
     verify(dataSourceFactory, times(1)).createDataSource(dataSourceMetadata);
@@ -228,11 +213,7 @@ class DataSourceServiceImplTest {
   @Test
   void testUpdateDefaultDataSource() {
     DataSourceMetadata dataSourceMetadata =
-        metadata(
-            DEFAULT_DATASOURCE_NAME,
-            DataSourceType.OPENSEARCH,
-            Collections.emptyList(),
-            ImmutableMap.of());
+        metadata(DEFAULT_DATASOURCE_NAME, DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of());
     UnsupportedOperationException unsupportedOperationException =
         assertThrows(
             UnsupportedOperationException.class,
@@ -276,7 +257,7 @@ class DataSourceServiceImplTest {
                 STATUS_FIELD,
                 DataSourceStatus.DISABLED));
     DataSourceMetadata getData =
-        metadata("testDS", DataSourceType.OPENSEARCH, Collections.emptyList(), ImmutableMap.of());
+        metadata("testDS", DataSourceType.OPENSEARCH, List.of(), ImmutableMap.of());
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
         .thenReturn(Optional.ofNullable(getData));
 
@@ -339,7 +320,7 @@ class DataSourceServiceImplTest {
             .setName("testDS")
             .setProperties(properties)
             .setConnector(DataSourceType.PROMETHEUS)
-            .setAllowedRoles(Collections.singletonList("prometheus_access"))
+            .setAllowedRoles(List.of("prometheus_access"))
             .build();
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
         .thenReturn(Optional.of(dataSourceMetadata));
@@ -364,7 +345,7 @@ class DataSourceServiceImplTest {
             .setName("testDS")
             .setProperties(properties)
             .setConnector(DataSourceType.PROMETHEUS)
-            .setAllowedRoles(Collections.singletonList("prometheus_access"))
+            .setAllowedRoles(List.of("prometheus_access"))
             .build();
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
         .thenReturn(Optional.of(dataSourceMetadata));
@@ -391,7 +372,7 @@ class DataSourceServiceImplTest {
             .setName("testGlue")
             .setProperties(properties)
             .setConnector(DataSourceType.S3GLUE)
-            .setAllowedRoles(Collections.singletonList("glue_access"))
+            .setAllowedRoles(List.of("glue_access"))
             .build();
     when(dataSourceMetadataStorage.getDataSourceMetadata("testGlue"))
         .thenReturn(Optional.of(dataSourceMetadata));
@@ -433,8 +414,7 @@ class DataSourceServiceImplTest {
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
         .thenReturn(
             Optional.ofNullable(
-                metadata(
-                    "testDS", DataSourceType.PROMETHEUS, Collections.emptyList(), properties)));
+                metadata("testDS", DataSourceType.PROMETHEUS, List.of(), properties)));
     DataSourceMetadata dataSourceMetadata = this.dataSourceService.getDataSourceMetadata("testDS");
     assertTrue(dataSourceMetadata.getProperties().containsKey("prometheus.uri"));
     assertTrue(dataSourceMetadata.getProperties().containsKey("prometheus.auth.type"));
@@ -455,7 +435,7 @@ class DataSourceServiceImplTest {
             .setName("testDS")
             .setProperties(properties)
             .setConnector(DataSourceType.PROMETHEUS)
-            .setAllowedRoles(Collections.singletonList("prometheus_access"))
+            .setAllowedRoles(List.of("prometheus_access"))
             .setDataSourceStatus(DataSourceStatus.DISABLED)
             .build();
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
@@ -482,7 +462,7 @@ class DataSourceServiceImplTest {
             .setName("testDS")
             .setProperties(properties)
             .setConnector(DataSourceType.PROMETHEUS)
-            .setAllowedRoles(Collections.singletonList("prometheus_access"))
+            .setAllowedRoles(List.of("prometheus_access"))
             .setDataSourceStatus(DataSourceStatus.ACTIVE)
             .build();
     when(dataSourceMetadataStorage.getDataSourceMetadata("testDS"))
