@@ -10,7 +10,6 @@ import static org.opensearch.sql.utils.MLCommonsConstants.CENTROIDS;
 import static org.opensearch.sql.utils.MLCommonsConstants.DISTANCE_TYPE;
 import static org.opensearch.sql.utils.MLCommonsConstants.ITERATIONS;
 
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -91,7 +90,7 @@ public class MLCommonsOperator extends MLCommonsOperatorActions {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   protected MLAlgoParams convertArgumentToMLParameter(
