@@ -24,7 +24,6 @@ import static org.opensearch.sql.expression.aggregation.VarianceAggregator.varia
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
@@ -73,9 +72,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -90,9 +87,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "sum(age)", new SumAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(named("sum(age)", new SumAggregator(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -107,10 +102,8 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "count(age)",
-                    new CountAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(
+                named("count(age)", new CountAggregator(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -125,8 +118,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(*)", new CountAggregator(Arrays.asList(literal("*")), INTEGER)))));
+            List.of(named("count(*)", new CountAggregator(List.of(literal("*")), INTEGER)))));
   }
 
   @Test
@@ -140,9 +132,7 @@ class MetricAggregationBuilderTest {
                 + "    }%n"
                 + "  }%n"
                 + "}"),
-        buildQuery(
-            Arrays.asList(
-                named("count(1)", new CountAggregator(Arrays.asList(literal(1)), INTEGER)))));
+        buildQuery(List.of(named("count(1)", new CountAggregator(List.of(literal(1)), INTEGER)))));
   }
 
   @Test
@@ -157,9 +147,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "min(age)", new MinAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(named("min(age)", new MinAggregator(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -174,9 +162,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "max(age)", new MaxAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(named("max(age)", new MaxAggregator(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -192,10 +178,8 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "var_pop(age)",
-                    variancePopulation(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(
+                named("var_pop(age)", variancePopulation(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -211,10 +195,8 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "var_samp(age)",
-                    varianceSample(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(
+                named("var_samp(age)", varianceSample(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -234,7 +216,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named(
                     "percentile(age, 50)",
                     new PercentileApproximateAggregator(
@@ -258,7 +240,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named(
                     "percentile(age, 50)",
                     new PercentileApproximateAggregator(
@@ -297,7 +279,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named(
                     "percentile(age, 50)",
                     new PercentileApproximateAggregator(
@@ -318,10 +300,9 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named(
-                    "stddev_pop(age)",
-                    stddevPopulation(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+                    "stddev_pop(age)", stddevPopulation(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -337,10 +318,8 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Arrays.asList(
-                named(
-                    "stddev_samp(age)",
-                    stddevSample(Arrays.asList(ref("age", INTEGER)), INTEGER)))));
+            List.of(
+                named("stddev_samp(age)", stddevSample(List.of(ref("age", INTEGER)), INTEGER)))));
   }
 
   @Test
@@ -355,11 +334,10 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Collections.singletonList(
+            List.of(
                 named(
                     "count(distinct name)",
-                    new CountAggregator(Collections.singletonList(ref("name", STRING)), INTEGER)
-                        .distinct(true)))));
+                    new CountAggregator(List.of(ref("name", STRING)), INTEGER).distinct(true)))));
   }
 
   @Test
@@ -389,10 +367,10 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Collections.singletonList(
+            List.of(
                 named(
                     "count(distinct name) filter(where age > 30)",
-                    new CountAggregator(Collections.singletonList(ref("name", STRING)), INTEGER)
+                    new CountAggregator(List.of(ref("name", STRING)), INTEGER)
                         .condition(DSL.greater(ref("age", INTEGER), literal(30)))
                         .distinct(true)))));
   }
@@ -417,7 +395,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Collections.singletonList(
+            List.of(
                 named(
                     "take(name, 10)",
                     new TakeAggregator(
@@ -459,7 +437,7 @@ class MetricAggregationBuilderTest {
                 + "  }%n"
                 + "}"),
         buildQuery(
-            Collections.singletonList(
+            List.of(
                 named(
                     "take(name, 10) filter(where age > 30)",
                     new TakeAggregator(ImmutableList.of(ref("name", STRING), literal(10)), ARRAY)
@@ -472,23 +450,22 @@ class MetricAggregationBuilderTest {
         IllegalStateException.class,
         () ->
             buildQuery(
-                Collections.singletonList(
+                List.of(
                     named(
                         "avg(distinct age)",
-                        new AvgAggregator(Collections.singletonList(ref("name", STRING)), STRING)
-                            .distinct(true)))),
+                        new AvgAggregator(List.of(ref("name", STRING)), STRING).distinct(true)))),
         "unsupported distinct aggregator avg");
   }
 
   @Test
   void should_throw_exception_for_unsupported_aggregator() {
     when(aggregator.getFunctionName()).thenReturn(new FunctionName("unsupported_agg"));
-    when(aggregator.getArguments()).thenReturn(Arrays.asList(ref("age", INTEGER)));
+    when(aggregator.getArguments()).thenReturn(List.of(ref("age", INTEGER)));
 
     IllegalStateException exception =
         assertThrows(
             IllegalStateException.class,
-            () -> buildQuery(Arrays.asList(named("unsupported_agg(age)", aggregator))));
+            () -> buildQuery(List.of(named("unsupported_agg(age)", aggregator))));
     assertEquals("unsupported aggregator unsupported_agg", exception.getMessage());
   }
 
@@ -499,11 +476,11 @@ class MetricAggregationBuilderTest {
             IllegalStateException.class,
             () ->
                 buildQuery(
-                    Arrays.asList(
+                    List.of(
                         named(
                             "count(age)",
                             new CountAggregator(
-                                Arrays.asList(named("age", ref("age", INTEGER))), INTEGER)))));
+                                List.of(named("age", ref("age", INTEGER))), INTEGER)))));
     assertEquals("metric aggregation doesn't support expression age", exception.getMessage());
   }
 
